--- a/lib/locales/kg/translation.json
+++ b/lib/locales/kg/translation.json
@@ -277,5 +277,8 @@
       "q": "Багажымды сактап койсо болобу?",
       "a": "Ооба, биз коноктор үчүн келүүдөн мурун да, кеткенден кийин да багажды акысыз сактап турабыз."
     }
-  ]
+  ],
+  "sending": "Жөнөтүлүүдө...",
+  "contactSuccessMessage": "Жакын арада сиз менен байланышабыз",
+  "sended": "Билдирүү жөнөтүлдү!"
 }
