--- a/lib/locales/ru/translation.json
+++ b/lib/locales/ru/translation.json
@@ -277,5 +277,8 @@
       "q": "Могу ли я оставить багаж на хранение?",
       "a": "Да, мы предлагаем бесплатное хранение багажа для наших гостей как до заезда, так и после выезда."
     }
-  ]
+  ],
+  "sending": "Отправка...",
+  "contactSuccessMessage": "Мы свяжемся с вами в ближайшее время",
+  "sended": "Сообщение отправлено!"
 }
