--- a/lib/locales/en/translation.json
+++ b/lib/locales/en/translation.json
@@ -90,7 +90,7 @@
   "checkOut": "Check Out",
   "capacity": "Capacity",
   "beds": "beds",
-  "upToGuests": "Up to {count} guests",
+  "upToGuests": "Up to {{count}} guests",
   "rating": "Rating",
   "features": "Features",
   "amenities": "Amenities",
@@ -190,9 +190,9 @@
   "offerTitle1": "Weekly Stay",
   "offerDesc1": "Stay 7+ nights and get a 15% discount.",
   "offerTitle2": "Monthly Stay",
-  "offerDesc2": "Stay 30 days or more — 40% discount",
+  "offerDesc2": "Stay 30 days or more — 50% discount",
   "offerTitle3": "Group Booking",
-  "offerDesc3": "Book for 4+ people and save 40%.",
+  "offerDesc3": "Book for 4+ people and save 50%.",
   "whatWeProvideTitle": "What We Provide",
   "provideTitle1": "Comfortable Beds",
   "provideDesc1": "Quality mattresses and fresh linens.",
@@ -271,5 +271,12 @@
   ],
   "sending": "Sending...",
   "contactSuccessMessage": "We will contact you shortly",
-  "sended": "Message sent!"
+  "sended": "Message sent!",
+  "basedOn": "Based on",
+  "errorFetchingReviews": "Failed to fetch reviews",
+  "allFieldsRequired": "All fields are required",
+  "submissionFailed": "Submission failed",
+  "noReviewsYet": "No reviews yet",
+  "loadingReviews": "Loading reviews...",
+  "submitting": "Submitting..."
 }
