--- a/lib/locales/kg/translation.json
+++ b/lib/locales/kg/translation.json
@@ -80,7 +80,6 @@
   "faqq": "КБС",
   "privacyPolicy": "Купуялык саясаты",
   "information": "Маалымат",
-
   "book": "Брондоо",
   "bookNow": "Азыр брондоо",
   "viewDetails": "Толугураак",
@@ -92,7 +91,7 @@
   "checkOut": "Кетүү",
   "capacity": "Сыйымдуулугу",
   "beds": "керебет",
-  "upToGuests": "{count} конокко чейин",
+  "upToGuests": "{{count}} конокко чейин",
   "rating": "Баа",
   "features": "Өзгөчөлүктөр",
   "amenities": "Ыңгайлуулуктар",
@@ -117,11 +116,9 @@
   "free": "Акысыз",
   "freeCancellation": "Келүүгө 24 саат калганда акысыз жокко чыгаруу",
   "contactUs": "Биз менен байланышыңыз",
-
   "maleRoom": "Эркектердики",
   "femaleRoom": "Аялдардыкы",
   "mixedRoom": "Жалпы",
-
   "galleryTitle": "Биздин галерея",
   "gallerySubtitle": "Биздин хостелдин атмосферасын, жайлуу бөлмөлөрдөн баштап, жандуу жалпы аймактарга чейин изилдеңиз.",
   "allPhotos": "Баары",
@@ -130,7 +127,6 @@
   "exteriorPhotos": "Сырткы көрүнүш",
   "noPhotosFound": "Бул категорияда сүрөттөр табылган жок.",
   "viewPhoto": "Сүрөттү көрүү",
-
   "aboutTitle": "Биз жөнүндө",
   "aboutSubtitle": "Хостел 53 жана биздин меймандостук философиябыз жөнүндө көбүрөөк билиңиз.",
   "ourStory": "Биздин окуя",
@@ -139,7 +135,6 @@
   "ourPrinciples": "Биздин принциптер",
   "joinCommunity": "Биздин коомго кошулуңуз",
   "joinCommunityText": "Хостел 53түн достук үй-бүлөсүнүн бир бөлүгү болуңуз. Биз дайыма жаңы коноктордон кубанабыз жана Бишкектеги жашооңузду унутулгус кылууга даярбыз.",
-
   "contactTitle": "Биз менен байланышыңыз",
   "contactSubtitle": "Биз менен каалаган ыңгайлуу жол менен байланышыңыз.",
   "contactInfo": "Байланыш маалыматы",
@@ -151,7 +146,6 @@
   "sendMessage": "Билдирүү жөнөтүү",
   "interactiveMap": "Интерактивдүү карта",
   "openInGoogleMaps": "Google Картада ачуу",
-
   "reviewsTitle": "Коноктордун сын-пикирлери",
   "reviewsSubtitle": "Биздин коноктордун жашоосу жөнүндө эмне деп жатканын көрүңүз.",
   "overallRating": "Жалпы баа",
@@ -164,19 +158,15 @@
   "yourRating": "Сиздин бааңыз",
   "reviewSubmitted": "Сын-пикир жөнөтүлдү!",
   "reviewSubmittedText": "Пикириңиз үчүн рахмат!",
-
   "faqTitle": "Көп берилүүчү суроолор",
   "faqSubtitle": "Эң көп берилүүчү суроолорго жоопторду табыңыз.",
-
   "privacyPolicyTitle": "Купуялык саясаты",
   "privacyPolicyLastUpdated": "Акыркы жаңыртуу",
   "privacyPolicyP1": "Биз сиз брондоодо, биз менен байланышканда же башка жол менен баарлашканда түздөн-түз берген маалыматты чогултабыз. Бул маалымат сиздин атыңызды, электрондук почтаңыздын дарегин, телефон номериңизди жана брондоо маалыматыңызды камтышы мүмкүн.",
   "privacyPolicyP2": "Биз чогулткан маалыматты сиздин брондоолоруңузду иштетүү, сиз менен жашооңуз жөнүндө баарлашуу, суроо-талаптарыңызга жооп берүү жана кызматтарыбызды жакшыртуу үчүн колдонобуз.",
   "privacyPolicyP3": "Биз сиздин жеке маалыматыңызды үчүнчү жактарга сатпайбыз же ижарага бербейбиз. Биз сиздин маалыматыңызды биздин атыбыздан кызматтарды аткарган кызмат көрсөтүүчүлөр менен, мисалы, төлөмдөрдү иштетүү сыяктуу, бирок ошол кызматтарды көрсөтүү үчүн зарыл болгон өлчөмдө гана бөлүшө алабыз.",
   "privacyPolicyP4": "Биз сиздин жеке маалыматыңызды жоготуудан, уурдоодон, кыянаттык менен пайдалануудан жана уруксатсыз кирүүдөн, ачыкка чыгаруудан, өзгөртүүдөн жана жок кылуудан коргоого жардам берүү үчүн акылга сыярлык чараларды көрөбүз.",
-
   "bookingError": "Ээлөөдө ката кетти. Кайталап көрүңүз.",
-
   "carouselTitle1": "Хостел 53кө кош келиңиз",
   "carouselSubtitle1": "Бишкектин борборундагы үйүңүз",
   "carouselTitle2": "Кең ашкана",
@@ -197,9 +187,9 @@
   "offerTitle1": "Жумалык жашоо",
   "offerDesc1": "7+ түн жашап, 15% арзандатуу алыңыз.",
   "offerTitle2": "Айлык жашоо",
-  "offerDesc2": "30 күндөн ашык жашаганда — 40% арзандатуу",
+  "offerDesc2": "30 күндөн ашык жашаганда — 50% арзандатуу",
   "offerTitle3": "Топтук брондоо",
-  "offerDesc3": "4+ адамга брондоп, 20% арзандатуу алыңыз.",
+  "offerDesc3": "4+ адамга брондоп, 50% арзандатуу алыңыз.",
   "whatWeProvideTitle": "Биз эмне сунуштайбыз",
   "provideTitle1": "Ыңгайлуу төшөктөр",
   "provideDesc1": "Сапаттуу матрастар жана таза шейшептер.",
@@ -215,12 +205,10 @@
   "provideDesc6": "Биз сизге жардам берүүгө дайым даярбыз.",
   "ctaTitle": "Ыңгайлуу эс алууга даярсызбы?",
   "ctaSubtitle": "Азыр бөлмөңүздү брондоп, Бишкектеги эң мыкты меймандостукту сезиңиз.",
-
   "footerDescription": "Бишкектин борборунда жылуулук, ыңгайлуулук жана жеткиликтүүлүк.",
   "quickLinks": "Тез шилтемелер",
   "contacts": "Байланыштар",
   "allRightsReserved": "Бардык укуктар корголгон.",
-
   "searchRooms": "Бөлмөлөрдү издөө",
   "searchSubtitle": "Жашоо үчүн идеалдуу бөлмө табыңыз",
   "male": "Эркектер үчүн",
@@ -280,5 +268,12 @@
   ],
   "sending": "Жөнөтүлүүдө...",
   "contactSuccessMessage": "Жакын арада сиз менен байланышабыз",
-  "sended": "Билдирүү жөнөтүлдү!"
+  "sended": "Билдирүү жөнөтүлдү!",
+  "basedOn": "Сын-пикирдин негизинде",
+  "errorFetchingReviews": "Сын-пикирлерди жүктөө мүмкүн болгон жок",
+  "allFieldsRequired": "Бардык талааларды сөзсүз толтуруш керек",
+  "submissionFailed": "Маалыматты жөнөтүү мүмкүн болгон жок",
+  "noReviewsYet": "Азырынча сын-пикирлер жок",
+  "loadingReviews": "Сын-пикирлер жүктөлүүдө...",
+  "submitting": "Жөнөтүлүүдө..."
 }
