--- a/lib/locales/ru/translation.json
+++ b/lib/locales/ru/translation.json
@@ -92,7 +92,7 @@
   "checkOut": "Выезд",
   "capacity": "Вместимость",
   "beds": "кровати",
-  "upToGuests": "До {count} гостей",
+  "upToGuests": "До {{count}} гостей",
   "rating": "Рейтинг",
   "features": "Особенности",
   "amenities": "Удобства",
@@ -128,7 +128,6 @@
   "exteriorPhotos": "Экстерьер",
   "noPhotosFound": "Фотографии в данной категории не найдены.",
   "viewPhoto": "Посмотреть фото",
-
   "aboutTitle": "О нас",
   "aboutSubtitle": "Узнайте больше о Хостеле 53 и нашей философии гостеприимства.",
   "ourStory": "Наша история",
@@ -137,7 +136,6 @@
   "ourPrinciples": "Наши принципы",
   "joinCommunity": "Присоединяйтесь к нашему сообществу",
   "joinCommunityText": "Станьте частью дружной семьи Хостела 53. Мы всегда рады новым гостям и готовы сделать ваше пребывание в Бишкеке незабываемым.",
-
   "contactTitle": "Контакты",
   "contactSubtitle": "Свяжитесь с нами любым удобным способом.",
   "contactInfo": "Контактная информация",
@@ -149,7 +147,6 @@
   "sendMessage": "Отправить сообщение",
   "interactiveMap": "Интерактивная карта",
   "openInGoogleMaps": "Открыть в Google Maps",
-
   "reviewsTitle": "Отзывы гостей",
   "reviewsSubtitle": "Посмотрите, что говорят наши гости о своем пребывании.",
   "overallRating": "Общий рейтинг",
@@ -162,20 +159,16 @@
   "yourRating": "Ваша оценка",
   "reviewSubmitted": "Отзыв отправлен!",
   "reviewSubmittedText": "Спасибо за ваш отзыв!",
-
   "faqTitle": "Часто задаваемые вопросы",
   "faqSubtitle": "Найдите ответы на самые частые вопросы.",
-
   "privacyPolicyTitle": "Политика конфиденциальности",
   "privacyPolicyLastUpdated": "Последнее обновление",
   "privacyPolicyP1": "Мы собираем информацию, которую вы предоставляете нам напрямую, когда вы делаете бронирование, связываетесь с нами или иным образом общаетесь с нами. Эта информация может включать ваше имя, адрес электронной почты, номер телефона и детали бронирования.",
   "privacyPolicyP2": "Мы используем собранную информацию для обработки ваших бронирований, общения с вами по поводу вашего пребывания, ответа на ваши запросы и улучшения наших услуг.",
   "privacyPolicyP3": "Мы не продаем и не передаем в аренду вашу личную информацию третьим лицам. Мы можем передавать вашу информацию поставщикам услуг, которые выполняют услуги от нашего имени, например, обработку платежей.",
   "privacyPolicyP4": "Мы принимаем разумные меры для защиты вашей личной информации от потери, кражи, неправомерного использования и несанкционированного доступа, раскрытия, изменения и уничтожения.",
-
   "confirmBookingDetails": "Пожалуйста, проверьте детали вашего бронирования перед подтверждением.",
   "room": "Номер",
-
   "bookingError": "Ошибка бронирования. Пожалуйста, попробуйте снова.",
   "carouselTitle1": "Добро пожаловать в Хостел 53",
   "carouselSubtitle1": "Ваш дом в центре Бишкека",
@@ -197,9 +190,9 @@
   "offerTitle1": "Недельное проживание",
   "offerDesc1": "Проживание 7+ ночей со скидкой 15%.",
   "offerTitle2": "Месячное проживание",
-  "offerDesc2": "При проживании от 30 дней — скидка 40%",
+  "offerDesc2": "При проживании от 30 дней — скидка 50%",
   "offerTitle3": "Групповое бронирование",
-  "offerDesc3": "Бронируйте для 4+ человек со скидкой 40%.",
+  "offerDesc3": "Бронируйте для 4+ человек со скидкой 50%.",
   "whatWeProvideTitle": "Что мы предоставляем",
   "provideTitle1": "Удобные кровати",
   "provideDesc1": "Качественные матрасы и свежее белье.",
@@ -219,10 +212,8 @@
   "quickLinks": "Быстрые ссылки",
   "contacts": "Контакты",
   "allRightsReserved": "Все права защищены.",
-
   "searchRooms": "Поиск номеров",
   "searchSubtitle": "Найдите идеальный номер для проживания",
-
   "male": "Мужской",
   "female": "Женский",
   "mixed": "Смешанный",
@@ -280,5 +271,12 @@
   ],
   "sending": "Отправка...",
   "contactSuccessMessage": "Мы свяжемся с вами в ближайшее время",
-  "sended": "Сообщение отправлено!"
+  "sended": "Сообщение отправлено!",
+  "basedOn": "Основано на",
+  "errorFetchingReviews": "Не удалось загрузить отзывы",
+  "allFieldsRequired": "Все поля обязательны для заполнения",
+  "submissionFailed": "Не удалось отправить данные",
+  "noReviewsYet": "Отзывов пока нет",
+  "loadingReviews": "Загрузка отзывов...",
+  "submitting": "Отправка..."
 }
